# blog-friend-links-data-generator-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/ISSUE_TEMPLATE/: add-friend-link.yaml
.github/configs/: label-commenter-config.yml
.github/workflows/: generate.yml  label-commenter.yml
doc/: design.md
docs/: design.md
output/: linksData.json  linksData.mjs
src/: config.rs  config.toml  github_api_responses.rs  json_to_js.rs  link_entry.rs  script.ers  script.rs
