[package]
name = "blog-friend-links-data-generator"
version = "0.1.0"
authors = [
    "iXOR Technology <contact@ixor.dev>",
    "Qian Qian \"Cubik\" <cubik65536@cubik65536.top>"
]
edition = "2021"
description = "A Rust Script used to generate blog friend links data (in JSON format) from GitHub Issue."
readme = "README.md"
repository = "https://github.com/iXORTech/blog-friend-links-data-generator"
license = "MIT"
license-file = "LICENSE"

[[bin]]
name = "blog-friend-links-data-generator"
path = "src/script.rs"

[dependencies]
