[package]
name = "blog-friend-links-data-generator"
version = "0.1.0"
authors = [
    "iXOR Technology <contact@ixor.dev>",
    "Qian Qian \"Cubik\" <cubik65536@cubik65536.top>"
]
edition = "2021"
description = "A Rust Script used to generate blog friend links data (in JSON format) from GitHub Issue."
readme = "README.md"
repository = "https://github.com/iXORTech/blog-friend-links-data-generator"
license = "MIT"

[[bin]]
name = "blog-friend-links-data-generator"
path = "src/script.rs"

[dependencies]
chrono = "0.4.41"   # Date and Time Library
reqwest = "0.12.15" # HTTP Client
serde = { version = "1.0.219", features = ["derive"] }  # Serialization/Deserialization
serde_json = "1.0.140"  # JSON Serialization/Deserialization
tokio = { version = "1", features = ["full"] } # Asynchronous Runtime
toml = "0.8.22" # TOML Parsing
regex = "1.11.1"    # Regular Expression Library
